tests/ui/test_unknown_field.stderr
error: unknown field `garbage`
 --> $DIR/test_unknown_field.rs:4:20
  |
4 | #[shorthand(enable(garbage))]
  |                    ^^^^^^^

error: unknown field `garbage`
 --> $DIR/test_unknown_field.rs:5:21
  |
5 | #[shorthand(disable(garbage))]
  |                     ^^^^^^^
